<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ShrubsInk</string>
    <string name="shrubslink">ShrubsInk</string>
    <string name="_1_tree_oxygen_for_you">1 Tree = Oxygen for YOU</string>
    <string name="don_t_travel_to_deserted_future">Don\'t travel to deserted future</string>
    <string name="tnc">By continuing, you agree that you have read and accept our Terms and Conditions and Privacy Policy</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="email">sample@gmail.com</string>
    <string name="username">Arul Mozhi S</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="address_line">Address Line</string>
    <string name="city">City</string>
    <string name="personal">Personal</string>
    <string name="age">Age</string>
    <string name="save_content">Save Content</string>
    <string name="phone">Phone</string>
    <string name="pincode">Pincode</string>
    <string name="address">Address</string>
    <string name="save_address">Save Address</string>
    <string name="save_your_address">Save your address</string>
    <string name="add_address">Add Address</string>
    <string name="sample_address">472/4, Sample Address Line, Shrubs Nagar</string>
    <string name="city_pincode">City, Pincode</string>
    <string name="state_country">State, Country</string>
    <string name="save_your_general">Save your general</string>
    <string name="save_general">Save General</string>
    <string name="general">General</string>
    <string name="male_20">Male, 20</string>
    <string name="phone_8248433574">Phone: 8248433574</string>
    <string name="edit_general">Edit General</string>
    <string name="add_general">Add General</string>
    <string name="edit_address">Edit Address</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="short_bio">Short Bio</string>
    <string name="designation">Designation</string>
    <string name="shrubsink_bw_logo">ShrubsInk BW Logo</string>
    <string name="hello_arul_mozhi">Hello, Arul Mozhi</string>
    <string name="discuss_with_your_peers_amp_be_the_part_of_their_life"><![CDATA[Discuss with your peers & be the part of their life.]]></string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="search">Search</string>
    <string name="post_query">Post Query</string>
    <string name="ask_a_public_question">Ask a public question</string>
    <string name="title">1. Title</string>
    <string name="title_content">Be specific and imagine you’re asking an issue to another person.</string>
    <string name="title_example">E.G. Are there any medicines to avoid bugs in Sapota (Chiku) plant?</string>
    <string name="body">3. Body</string>
    <string name="body_content">Include all the information someone would need to clarify your question</string>
    <string name="body_example">Detail your question correctly</string>
    <string name="issue_example">E.G. Madurai, Tamil Nadu</string>
    <string name="tag_example">E.G. Chiko, Sapota, Fruit</string>
    <string name="picture">2. Picture</string>
    <string name="picture_content">Add plant image, that helps peers to understand question better</string>
    <string name="issue_content">Solution may differ based on soil location, so please mention it</string>
    <string name="tag_content">Tag attracts peers to answer your question</string>
    <string name="publish">Publish</string>
    <string name="close">Close</string>
    <string name="_4_issue_location">4. Issue Location</string>
    <string name="_5_tag">5. Tags</string>
    <string name="chiko_sapota_plant">Chiko • Sapota • Plant</string>
    <string name="tags_chiko_sapota_plant">Tags: Chiko • Sapota • Plant</string>
    <string name="_07_aug_06_47_am">07 Aug • 06:47 AM</string>
    <string name="short_bio_in_list">A guy who loves planting, gardening, harvesting, cultivate</string>
    <string name="sample_body_list_item">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="query_image">Query Image</string>
    <string name="_100_likes">100 likes</string>
    <string name="not_yet_solved">Not yet solved</string>
    <string name="check_internet_connection">Something went wrong, Please check internet connectivity</string>
    <string name="madurai_tamil_nadu">Madurai, Tamil Nadu</string>
    <string name="products">Products</string>
    <string name="likes">Likes</string>
    <string name="answers">Answers</string>
    <string name="loading_comment">Loading Comment...</string>
    <string name="your_answer_here">Your answer here ...</string>
    <string name="_10">10</string>
    <string name="loading">Loading...</string>
    <string name="options">Options</string>
    <string name="violation">Violation</string>
    <string name="correct_solution">Correct Solution</string>
    <string name="no_answers">No answers</string>
    <string name="ok">ok</string>
    <string name="sexual_activity">Sexual activity</string>
    <string name="scam_or_fraud">Scam or fraud</string>
    <string name="irrelevant_or_violent">Irrelevant or violent</string>
    <string name="report_answer">Report Answer</string>
    <string name="thanks_for_letting_us_know">Thanks for letting us know</string>
    <string name="bullying_or_hate_words_or_symbols">Bullying or hate words or symbols</string>
    <string name="send_emergency_meesage_to_us">Send emergency meesage to us</string>
    <string name="back_to_home">Back to home</string>
    <string name="ask">Ask</string>
    <string name="report_question">Report Question</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="credits">Credits</string>
    <string name="_1000_points">0 Credits</string>
    <string name="your_current_credits">Your current total credits</string>
    <string name="credits_board">Credits Board</string>
    <string name="posting_a_single_question">For posting each question</string>
    <string name="posting_a_single_answer">For posting each answer</string>
    <string name="how_are_credits_used">How are credits used?</string>
    <string name="credis_usage">You can use your credits to get some amazing rewards, goodies or even saplings from us</string>
    <string name="thousand_credits">• 1,000 Credits - ShrubsInk Suprise Goodies</string>
    <string name="five_hundred_credits">• 500 Credits - Amazon Gift Card</string>
    <string name="two_thousand_credits">Get Hired without interview from us for the role of ShrubsTechie (Customer Tech Care) with decent package in the industry</string>
    <string name="ten_thousand_credits">• 10,000 Credits - Pick your favorite Shrubs</string>
    <string name="five_thousand_credits">• 5,000 Credits - Pick your favorite Shrubs</string>
    <string name="claim_my_credit">Claim my credit</string>
    <string name="credit_note">Note, if we find your Question or your Answer violates Code of Conduct, your
        credits will be reduced, you\'ll be notified accordingly</string>
    <string name="my_activities">My Activities</string>
    <string name="loading_notification">Loading Notification..</string>
    <string name="my_activity">My Activity</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="inbox">Inbox</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="tnc2">These terms and conditions outline the rules and regulations for the use of ShrubsInk\'s Website, located at www.shrubsink.com and ShrubsInk App</string>
    <string name="tnc3">By accessing this website we assume you accept these terms and conditions. Do not continue to use ShrubsInk if you do not agree to take all of the terms and conditions stated on this page. </string>
    <string name="tnc4">The following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all Agreements: "Client", "You" and "Your" refers to you, the person log on this website and compliant to the Company’s terms and conditions. "The Company", "Ourselves", "We", "Our" and "Us", refers to our Company. "Party", "Parties", or "Us", refers to both the Client and ourselves. All terms refer to the offer, acceptance and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the express purpose of meeting the Client’s needs in respect of provision of the Company’s stated services, in accordance with and subject to, prevailing law of Netherlands. Any use of the above terminology or other words in the singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to same.</string>
    <string name="cookies">Cookies</string>
    <string name="license">License</string>
    <string name="tnc5">We employ the use of cookies. By accessing ShrubsInk, you agreed to use cookies in agreement with the ShrubsInk\'s Privacy Policy.</string>
    <string name="tnc6">Most interactive websites use cookies to let us retrieve the user’s details for each visit. Cookies are used by our website to enable the functionality of certain areas to make it easier for people visiting our website. Some of our affiliate/advertising partners may also use cookies.</string>
    <string name="tnc7">Unless otherwise stated, ShrubsInk and/or its licensors own the intellectual property rights for all material on ShrubsInk. All intellectual property rights are reserved. You may access this from ShrubsInk for your own personal use subjected to restrictions set in these terms and conditions.</string>
    <string name="tnc8">You must not:</string>
    <string name="tnc9">• Republish material from ShrubsInk\n• Sell, rent or sub-license material from ShrubsInk\n• Reproduce, duplicate or copy material from ShrubsInk\n• Redistribute content from ShrubsInk</string>
    <string name="tnc10">This Agreement shall begin on the date hereof.</string>
    <string name="tnc11">Parts of this website offer an opportunity for users to post and exchange opinions and information in certain areas of the website. ShrubsInk does not filter, edit, publish or review Comments prior to their presence on the website. Comments do not reflect the views and opinions of ShrubsInk,its agents and/or affiliates. Comments reflect the views and opinions of the person who post their views and opinions. To the extent permitted by applicable laws, ShrubsInk shall not be liable for the Comments or for any liability, damages or expenses caused and/or suffered as a result of any use of and/or posting of and/or appearance of the Comments on this website.</string>
    <string name="tnc12">ShrubsInk reserves the right to monitor all Comments and to remove any Comments which can be considered inappropriate, offensive or causes breach of these Terms and Conditions.</string>
    <string name="tnc13">You warrant and represent that:</string>
    <string name="tnc14">• You are entitled to post the Comments on our website and have all necessary licenses and consents to do so;
\n• The Comments do not invade any intellectual property right, including without limitation copyright, patent or trademark of any third party;
\n• The Comments do not contain any defamatory, libelous, offensive, indecent or otherwise unlawful material which is an invasion of privacy\n• The Comments will not be used to solicit or promote business or custom or present commercial activities or unlawful activity.
</string>
</resources>