<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:paddingBottom="50dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/product_sans_medium"
            android:text="@string/profile_settings"
            android:textColor="@color/slight_black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/back_activity_iv"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/back_activity_iv"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back_arrow" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/view_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_overlay="true"
            app:civ_border_width="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/username_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="38dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/username"
            android:textColor="@color/slight_black"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/email_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/product_sans_medium"
            android:text="@string/email"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toBottomOf="@+id/username_et" />

        <TextView
            android:id="@+id/username_et2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/address"
            android:textColor="@color/slight_black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view6"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/view4"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/view_gradient"
            app:layout_constraintStart_toEndOf="@+id/username_et2"
            app:layout_constraintTop_toBottomOf="@+id/view6"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/edit_address_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4"
            android:contentDescription="@string/edit_address" />

           <TextView
               android:id="@+id/address_line_tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="24dp"
               android:layout_marginLeft="24dp"
               android:layout_marginTop="16dp"
               android:fontFamily="@font/product_sans_regular"
               android:text="@string/sample_address"
               android:textColor="@color/slight_black"
               android:textSize="14sp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/username_et2"
               tools:ignore="MissingConstraints" />

           <TextView
               android:id="@+id/city_pincode_tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="24dp"
               android:layout_marginLeft="24dp"
               android:layout_marginTop="2dp"
               android:fontFamily="@font/product_sans_regular"
               android:text="@string/city_pincode"
               android:textColor="@color/grey"
               android:textSize="14sp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/address_line_tv"
               tools:ignore="MissingConstraints" />

           <TextView
               android:id="@+id/state_country_tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="24dp"
               android:layout_marginLeft="24dp"
               android:layout_marginTop="2dp"
               android:fontFamily="@font/product_sans_regular"
               android:text="@string/state_country"
               android:textColor="@color/grey"
               android:textSize="14sp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/city_pincode_tv"
               tools:ignore="MissingConstraints" />


        <View
            android:id="@+id/view6"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="136dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <TextView
            android:id="@+id/username_et3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/general"
            android:textColor="@color/slight_black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/view5"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/view_gradient"
            app:layout_constraintStart_toEndOf="@+id/username_et3"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/edit_general_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5"
            android:contentDescription="@string/edit_general" />

        <Button
            android:id="@+id/add_address_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_address"
            app:icon="@drawable/add"
            style="?attr/materialButtonOutlinedStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_et2" />

        <Button
            android:id="@+id/add_personal_btn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_general"
            app:icon="@drawable/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_et3" />

        <TextView
            android:id="@+id/short_bio_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/short_bio"
            android:textColor="@color/slight_black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_et3"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/designation_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/designation"
            android:textColor="@color/slight_black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/short_bio_tv"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/phone_8248433574"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/designation_tv"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/gender_age_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/male_20"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_tv"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>