<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/bottom_sheet_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="26dp"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/like_count_tv_bs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:layout_marginTop="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="16dp"
        android:textSize="14sp"
        android:textColor="@color/grey"
        android:layout_marginLeft="26dp" />

    <LinearLayout
        android:id="@+id/violation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="12dp"
            android:src="@drawable/ic_baseline_report_problem_24"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/violation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/violation"
            android:textColor="@color/slight_black"
            android:textSize="16sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="12dp"
            android:src="@drawable/ic_baseline_check_box_24"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/correct_solution" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_solution"
            android:textColor="@color/slight_black"
            android:textSize="16sp"
            android:layout_gravity="center"/>

    </LinearLayout>



</LinearLayout>